# missing-object-detector

./: .gitignore  README.md  mod_comparison.csv  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml
docs/source/: conf.py  index.rst
scripts/: distributions.py  format.py
src/mod_project/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/mod_project/pipelines/dataset_pipeline/: nodes.py  pipeline.py
src/mod_project/pipelines/mod_evaluation_pipeline/: nodes.py  pipeline.py
src/mod_project/pipelines/mod_pipeline/: nodes.py  pipeline.py
